--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,10 @@
 *{
     font-family: sans-serif;
 }
+a{
+    text-decoration: none;
+}
 body{
-    overflow-x: hidden;
+    padding: 0;
+    margin: 0;
 }
