--- a/src/app/css/buyhome.css
+++ b/src/app/css/buyhome.css
@@ -1,17 +1,41 @@
-.img{
-width: 100%;
-height: 400px;
+.img {
+  width: 100%;
+  height: 400px;
 }
-.imgsmall{
-    width: 100%;
-    height: 300px;
-
+.imgsmall {
+  width: 100%;
+  height: 300px;
 }
-.homeTitle{
-    background:-webkit-linear-gradient(40deg, #FFFFFF 42.68%, rgba(255, 255, 255, 0) 103.89%);
+.homeTitle {
+  background: -webkit-linear-gradient(
+    40deg,
+    #ffffff 42.68%,
+    rgba(255, 255, 255, 0) 103.89%
+  );
 
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-blend-mode: darken;
-  
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-blend-mode: darken;
+}
+.img-homes {
+  max-width: 500px;
+  width: 100%;
+  height: 80vh;
+}
+.img-homes img {
+  width: 100%;
+  height: 100%;
+}
+.mede {
+  background: -webkit-linear-gradient(
+    0deg,
+    #000000 1.89%,
+    #d50000 17.75%,
+    #0072db 42.93%,
+    #d70000 80.87%,
+    #000000 100%
+  );
+  background-blend-mode: darken;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
